fixed white space of benefits header and icons

--- a/css/style.css
+++ b/css/style.css
@@ -191,3 +191,9 @@ h4 {
   max-width: 650px;
   margin: 10px auto 15px;
 }
+
+/* line 194, ../scss/_main.scss */
+.benefits__header,
+.benefits_icons {
+  padding: 15px 0;
+}
