--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -190,3 +190,8 @@ h4 {
   max-width: 650px;
   margin: 10px auto 15px;
 }
+
+.benefits__header,
+.benefits_icons {
+  padding: 15px 0;
+}
